Made the "load dugga" button smaller for phone view. Next is to adjust positioning of the button for the different pages which may require altering of HTML files using the button pertaining to issue "#16685".

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -3486,6 +3486,17 @@ input.submit-button {
   -webkit-appearance: none
 }
 
+@media only screen and (max-width: 600px) {
+  input.submit-button {
+    width: 60px;
+    height: 20px;
+    line-height: 20px;
+    padding: 0;
+    font-size: 10px;
+  }
+}
+
+
 div.submit-button {
   background-color: var(--color-primary);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
